<resources>
    <string name="detail_synopsis">Spanning the years 1945 to 1955, a chronicle of the fictional Italian-American Corleone crime family. When organized crime family patriarch, Vito Corleone barely survives an attempt on his life, his youngest son, Michael steps in to take care of the would-be killers, launching a campaign of bloody revenge.</string>
    <string name="welcome_back">Selamat Datang Kembali !</string>
    <string name="popular">Sedang Ramai</string>
    <string name="just_released">Baru Rilis</string>
    <string name="now_playing">Sekarang Diputar</string>
    <string name="play">Mainkan</string>
    <string name="share">Bagikan</string>
    <string name="highlights">Sorotan</string>
    <string name="other_you_might_like">Mungkin Anda Suka</string>
    <string name="app_name">App Film 03</string>
    <string name="sign_in">Masuk ke akun anda !</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="password">Kata Sandi</string>
    <string name="profile">Profil</string>
    <string name="home">Beranda</string>
    <string name="email_here">Masukkan email</string>
    <string name="pass_here">Masukkan kata sandi</string>
</resources>