<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    tools:context=".AuthPage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/ic_movv" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textSize="30dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_log"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:layout_below="@+id/textView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/second"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/sign_in"
                android:textSize="23dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="25dp"
                android:hint="@string/email_here"
                app:endIconMode="clear_text"
                app:hintTextColor="#B8B8B8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_pw"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="50dp"
                android:hint="@string/pass_here"
                app:endIconMode="password_toggle"
                app:hintTextColor="#B8B8B8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppins_medium"
                android:text="Email"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_email"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/password"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_below="@+id/input_pw"
                android:layout_marginStart="40dp"
                android:background="@drawable/bg_btndetail"
                android:text="@string/login"
                android:textColor="@color/moreblacq" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_daftar"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_below="@+id/input_pw"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                android:background="@drawable/bg_btnshare"
                android:text="@string/register" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_light"
        android:text="Simple App Built By Alwi" />

</RelativeLayout>