<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/profiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/second"
            app:cardCornerRadius="13dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_logout"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_below="@+id/welcome"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/user"
                    android:background="@drawable/ic_logout" />

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/welcome_back"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/welcome"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_bold"
                    android:letterSpacing="0.03"
                    android:text="Alwi"
                    android:textSize="25sp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/prof_pic"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/img_prof" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_below="@+id/user"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_white_rounded"
                    android:clickable="true" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profiles"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/heavitas"
            android:text="@string/popular"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/linear_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_pop"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ho"
                android:layout_width="match_parent"
                android:layout_height="223dp"
                android:layout_below="@id/search_view"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                tools:listitem="@layout/rv_horizontal" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_toprated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_1"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/heavitas"
            android:text="@string/just_released"
            android:textSize="16.5dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_jusrel"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_below="@+id/tv_toprated"
            tools:listitem="@layout/rv_jusrel" />

        <TextView
            android:id="@+id/tv_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_jusrel"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/heavitas"
            android:text="@string/now_playing"
            android:textSize="16.5dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_NP"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_below="@+id/tv_upcoming"
            tools:listitem="@layout/rv_jusrel" />

    </RelativeLayout>
</ScrollView>