<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    tools:context=".detailPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- HEADER START -->
        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:foreground="@drawable/bg_text"
            android:scaleType="centerCrop"
            android:src="@drawable/img_prof" />

        <RelativeLayout
            android:id="@+id/lay_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_movie"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/tv_tdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:letterSpacing="0.02"
                android:text="Lorem Ipsum"
                android:textSize="26sp" />

            <ImageView
                android:id="@+id/ic_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_tdetail"
                android:src="@drawable/ic_stardet" />

            <TextView
                android:id="@+id/tv_ratedt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_tdetail"
                android:layout_marginStart="4dp"
                android:layout_marginTop="3.5dp"
                android:layout_toRightOf="@+id/ic_star"
                android:fontFamily="@font/poppins_light"
                android:text="10.0"
                android:textColor="@color/bluedt" />

            <ImageView
                android:id="@+id/ic_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_tdetail"
                android:layout_marginStart="12dp"
                android:layout_toRightOf="@+id/tv_ratedt"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/tv_datedt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_tdetail"
                android:layout_marginStart="4dp"
                android:layout_marginTop="3.5dp"
                android:layout_toRightOf="@+id/ic_calendar"
                android:fontFamily="@font/poppins_light"
                android:text="01/01/2001"
                android:textColor="@color/bluedt" />

            <ImageView
                android:id="@+id/ic_views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_tdetail"
                android:layout_marginStart="12dp"
                android:layout_toRightOf="@+id/tv_datedt"
                android:src="@drawable/ic_views" />

            <TextView
                android:id="@+id/tv_viewdt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_tdetail"
                android:layout_marginStart="4dp"
                android:layout_marginTop="3.5dp"
                android:layout_toRightOf="@+id/ic_views"
                android:fontFamily="@font/poppins_light"
                android:text="1000"
                android:textColor="@color/bluedt" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_viewdt"
                android:layout_marginTop="18dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_play"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginEnd="200dp"
                    android:background="@drawable/bg_btndetail"
                    android:text="PLAY"
                    android:textColor="@color/moreblacq" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_share"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="200dp"
                    android:background="@drawable/bg_btnshare"
                    android:text="SHARE" />

            </RelativeLayout>
        </RelativeLayout>
        <!-- HEADER END -->

        <!-- MIDSEC START -->
        <RelativeLayout
            android:id="@+id/lay_midsec"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lay_title"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineHeight="18dp"
                android:text="@string/detail_synopsis" />

        </RelativeLayout>
        <!-- MIDSEC END -->
        <!-- ENDSEC START -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lay_midsec"
            android:layout_marginStart="20dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/tv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/heavitas"
                android:letterSpacing="0.02"
                android:text="@string/highlights"
                android:textSize="17sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/iv_images1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@+id/tv_image"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="200dp"
                android:elevation="10dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/img_detpage1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:foreground="@drawable/bg_text"
                    android:scaleType="fitXY" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/iv_images2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@+id/tv_image"
                android:layout_marginStart="200dp"
                android:layout_marginTop="5dp"
                android:elevation="10dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/img_detpage2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:foreground="@drawable/bg_text"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_toprated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_images2"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/heavitas"
                android:text="@string/other_you_might_like"
                android:textSize="17dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_yml2"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:layout_below="@+id/tv_toprated"
                android:layout_marginStart="-20dp"
                tools:listitem="@layout/rv_jusrel" />

        </RelativeLayout>
        <!-- ENDSEC END -->

    </RelativeLayout>


</ScrollView>